--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,9 @@
 <head>
-<meta name="google-site-verification" content="Gzw3YRe378kbtmADXh6Lrr1gdotmcbrRgdPCXvQlYpw" />
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  {%- seo -%}
+  <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+  {%- feed_meta -%}
+  <meta name="google-site-verification" content="P5JvIrpAzGuAYMCBT3_-1TEpWsUUoQAaYK3B6hgaauA" />
 </head>
