--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,5 +10,6 @@
   {%- endif -%}
 
   {%- include custom-head.html -%}
-  
+
+  <meta name="google-site-verification" content="Gzw3YRe378kbtmADXh6Lrr1gdotmcbrRgdPCXvQlYpw" />  
 </head>
