--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,5 +11,5 @@
 
   {%- include custom-head.html -%}
 
-  <meta name="google-site-verification" content="Gzw3YRe378kbtmADXh6Lrr1gdotmcbrRgdPCXvQlYpw" />  
+  <meta name="google-site-verification" content="Gzw3YRe378kbtmADXh6Lrr1gdotmcbrRgdPCXvQlYpw">  
 </head>
